@@ -6084,8 +6084,13 @@ unsigned char *MagickWriteImageBlob( MagickWand *wand, size_t *length );
 <div class="section" id="id426">
 <h2>Description</h2>
 <p>MagickWriteImageBlob() implements direct to memory image formats.  It
-returns the image as a blob and its length.  The magick member of the Image
-structure determines the format of the returned blob (GIF, JPEG,  PNG, etc.)</p>
+returns the image as a blob (a formatted &quot;file&quot; in memory) and its
+length, starting from the current position in the image sequence.
+Use MagickSetImageFormat() to set the format to write to the blob
+(GIF, JPEG,  PNG, etc.).</p>
+<p>Use MagickResetIterator() on the wand if it is desired to write
+a sequence from the beginning and the iterator is not currently
+at the beginning.</p>
 <p>The format of the MagickWriteImageBlob method is:</p>
 <pre class="literal-block">
 unsigned char *MagickWriteImageBlob( MagickWand *wand, size_t *length );
@@ -6134,7 +6139,9 @@ unsigned int MagickWriteImages( MagickWand *wand, const char *filename,
 </div>
 <div class="section" id="id430">
 <h2>Description</h2>
-<p>MagickWriteImages() writes an image or image sequence.</p>
+<p>MagickWriteImages() writes an image or image sequence.  If the wand
+represents an image sequence, then it is written starting at the first
+frame in the sequence.</p>
 <p>The format of the MagickWriteImages method is:</p>
 <pre class="literal-block">
 unsigned int MagickWriteImages( MagickWand *wand, const char *filename,
@@ -6170,7 +6177,7 @@ MagickWand NewMagickWand( void );
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2011-01-25 02:39 UTC.
+Generated on: 2011-02-14 00:04 UTC.
 
 </div>
 </body>
